--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,10 +27,14 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <!--Dragula js and css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.css" />
-    <link rel="stylesheet" href="css/dragthing.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js"></script>
+    <!--local js and css-->
+    <link rel="stylesheet" href="css/dragExercise.css" />
+    <link rel="stylesheet" href="css/courseStyle.css" />
     <script src="js/jsSetup.js"></script>
+
 </body>
 
 </html>
